[gd_scene load_steps=27 format=2]

[ext_resource path="res://demo/player1demo.gd" type="Script" id=1]
[ext_resource path="res://1chardemo/d1char.png" type="Texture" id=2]
[ext_resource path="res://1chardemo/u1char.png" type="Texture" id=3]
[ext_resource path="res://1chardemo/ur1char.png" type="Texture" id=4]
[ext_resource path="res://1chardemo/dr3char.png" type="Texture" id=5]
[ext_resource path="res://1chardemo/1flashlight.png" type="Texture" id=6]
[ext_resource path="res://1chardemo/r3char.png" type="Texture" id=7]
[ext_resource path="res://1chardemo/u3char.png" type="Texture" id=8]
[ext_resource path="res://1chardemo/u2char.png" type="Texture" id=9]
[ext_resource path="res://1chardemo/2light.png" type="Texture" id=10]
[ext_resource path="res://assets/light/light3.png" type="Texture" id=11]
[ext_resource path="res://1chardemo/d2char.png" type="Texture" id=12]
[ext_resource path="res://1chardemo/r1char.png" type="Texture" id=13]
[ext_resource path="res://1chardemo/ur2char.png" type="Texture" id=14]
[ext_resource path="res://1chardemo/d3char.png" type="Texture" id=15]
[ext_resource path="res://1chardemo/dr1char.png" type="Texture" id=16]
[ext_resource path="res://1chardemo/dr2char.png" type="Texture" id=17]
[ext_resource path="res://1chardemo/r2char.png" type="Texture" id=18]
[ext_resource path="res://1chardemo/ur3char.png" type="Texture" id=19]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 7 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 5 ) ],
"loop": true,
"name": "downright",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 15 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 19 ) ],
"loop": true,
"name": "upright",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 22.0001
height = 23.9998

[sub_resource type="CapsuleShape2D" id=4]
radius = 40.0
height = 84.0

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -21.0743, -2.03586, -32.7199, 3.57645, -37.35, 13.6786, -33.8423, 21.6762, -24.7223, 26.8675, 25.7885, 27.1482, 31.4008, 22.6583, 36.0309, 12.8368, 30.8395, 2.17337, 21.7195, -1.75525 )

[sub_resource type="Animation" id=6]
resource_name = "look_around"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.4, 2.4, 2.6, 2.8, 3.4, 3.6, 3.8, 4.7, 4.9, 5.1, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "down", "down", "downright", "right", "right", "upright", "up", "up", "upright", "right", "right", "downright", "down", "down" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.4, 3.6, 4.9, 5.1, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true, false, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "look_right"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "right", "right" ]
}

[node name="playerdemo" type="KinematicBody2D"]
collision_layer = 5
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -3840.0
margin_top = -2160.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
material = SubResource( 1 )
position = Vector2( 2.11758e-22, -50 )
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
animation = "down"
speed_scale = 1.5

[node name="walkarea" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.57079
shape = SubResource( 3 )

[node name="hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="hitboxshape" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, -50 )
shape = SubResource( 4 )

[node name="lightglow" type="Light2D" parent="."]
position = Vector2( 0, -99.6464 )
texture = ExtResource( 11 )
offset = Vector2( 0, 50 )
texture_scale = 12.0
energy = 0.8
mode = 2
shadow_item_cull_mask = 3

[node name="shadow" type="LightOccluder2D" parent="."]
show_behind_parent = true
light_mask = 4
occluder = SubResource( 5 )
light_mask = 4

[node name="flashlightcont" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="flashlightpng" type="Sprite" parent="flashlightcont"]
position = Vector2( 30, 0 )
rotation = 3.14159
scale = Vector2( 0.15, 0.2 )
texture = ExtResource( 6 )
offset = Vector2( -100, 0 )

[node name="flashlightdemo" type="Light2D" parent="flashlightcont"]
rotation = 1.5708
scale = Vector2( 0.571148, 0.639441 )
texture = ExtResource( 10 )
offset = Vector2( 20, -960 )
texture_scale = 3.5
mode = 2
shadow_enabled = true

[node name="HealthCooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="HealthRegen" type="Timer" parent="."]
wait_time = 0.01

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="Dash_Length" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Dash_Cooldown" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Stamina_Regen" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/look_around = SubResource( 6 )
anims/look_right = SubResource( 7 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="HealthCooldown" to="." method="_on_HealthCooldown_timeout"]
[connection signal="timeout" from="HealthRegen" to="." method="_on_HealthRegen_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="Dash_Length" to="." method="_on_Dash_Length_timeout"]
[connection signal="timeout" from="Dash_Cooldown" to="." method="_on_Dash_Cooldown_timeout"]
[connection signal="timeout" from="Stamina_Regen" to="." method="_on_Stamina_Regen_timeout"]
